--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.8.8+build.202
 
 # Mod Properties
-	mod_version = 0.1.0-beta-m
+	mod_version = 0.1.0-beta-m2
 	maven_group = kaptainwutax
 	archives_base_name = seedcracker
 
